@@ -89,6 +89,7 @@ import org.labkey.api.files.FileBrowserConfigWriter;
 import org.labkey.api.files.FileContentService;
 import org.labkey.api.markdown.MarkdownService;
 import org.labkey.api.message.settings.MessageConfigService;
+import org.labkey.api.migration.DatabaseMigrationService;
 import org.labkey.api.module.FolderType;
 import org.labkey.api.module.FolderTypeManager;
 import org.labkey.api.module.Module;
@@ -97,6 +98,7 @@ import org.labkey.api.module.ModuleLoader;
 import org.labkey.api.module.SchemaUpdateType;
 import org.labkey.api.module.SpringModule;
 import org.labkey.api.module.Summary;
+import org.labkey.api.mcp.McpService;
 import org.labkey.api.notification.EmailMessage;
 import org.labkey.api.notification.EmailService;
 import org.labkey.api.notification.NotificationMenuView;
@@ -173,6 +175,7 @@ import org.labkey.api.util.ExceptionUtil;
 import org.labkey.api.util.FileUtil;
 import org.labkey.api.util.GUID;
 import org.labkey.api.util.JobRunner;
+import org.labkey.api.util.JspTestCase;
 import org.labkey.api.util.MimeMap;
 import org.labkey.api.util.MothershipReport;
 import org.labkey.api.util.PageFlowUtil;
@@ -252,6 +255,7 @@ import org.labkey.core.login.DbLoginManager;
 import org.labkey.core.login.LoginController;
 import org.labkey.core.metrics.SimpleMetricsServiceImpl;
 import org.labkey.core.metrics.WebSocketConnectionManager;
+import org.labkey.core.mcp.McpServiceImpl;
 import org.labkey.core.notification.EmailPreferenceConfigServiceImpl;
 import org.labkey.core.notification.EmailPreferenceContainerListener;
 import org.labkey.core.notification.EmailPreferenceUserListener;
@@ -356,6 +360,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Properties;
 import java.util.Set;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -535,11 +540,6 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
             "Short-circuit robots",
             "Save resources by not rendering pages marked as 'noindex' for robots. This is experimental as not all robots are search engines.",
             false);
-        OptionalFeatureService.get().addFeatureFlag(new OptionalFeatureFlag(AppProps.GENERATE_CONTROLLER_FIRST_URLS,
-            "Restore controller-first URLs",
-            "Generate URLs in a legacy format that puts the controller name before the folder path. This option will be removed in LabKey Server 26.3.",
-            false, false, OptionalFeatureService.FeatureType.Deprecated
-        ));
         OptionalFeatureService.get().addExperimentalFeatureFlag(AppProps.REJECT_CONTROLLER_FIRST_URLS,
             "Reject controller-first URLs",
             "Require standard path-first URLs. Note: This option will be ignored if the deprecated feature for generating controller-first URLs is enabled.",
@@ -559,8 +559,11 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
 
         ScriptEngineManagerImpl.registerEncryptionMigrationHandler();
 
+        McpService.get().register(new CoreMcp());
+
         deleteTempFiles();
     }
+
 
     private void deleteTempFiles()
     {
@@ -644,7 +647,7 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
         // For audit purposes, we use the first user as the originator of the message.
         // Would be better to have this be a site admin, but we aren't guaranteed to have such a user
         // for hosted sites. Another option is to use the guest user here, but that's strange.
-        svc.sendMessages(messages, users.get(0), ContainerManager.getRoot());
+        svc.sendMessages(messages, users.getFirst(), ContainerManager.getRoot());
     }
 
     private @Nullable String getValue(Map<StashedStartupProperties, StartupPropertyEntry> map, StashedStartupProperties prop)
@@ -1194,7 +1197,6 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
                 customLog4JConfig = Boolean.parseBoolean(ModuleLoader.getServletContext().getInitParameter("org.labkey.customLog4JConfig"));
             }
             results.put("customLog4JConfig", customLog4JConfig);
-            results.put("containerRelativeURL", AppProps.getInstance().getUseContainerRelativeURL());
             results.put("runtimeMode", AppProps.getInstance().isDevMode() ? "development" : "production");
             Set<String> deployedApps = new HashSet<>(CoreWarningProvider.collectAllDeployedApps());
             deployedApps.remove(labkeyContextPath);
@@ -1230,9 +1232,11 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
 
             if (CoreSchema.getInstance().getSqlDialect().isPostgreSQL())
             {
+                // Exclude temp schema to avoid PG exceptions when tables are appearing/disappearing during execution
+                // Note that they can be non-trivial in size.
                 SQLFragment sql = new SQLFragment("SELECT table_schema, SUM(total_size) FROM ");
                 sql.append(new PostgresTableSizesTable(new PostgresUserSchema(User.getAdminServiceUser(), ContainerManager.getRoot())), "t");
-                sql.append(" GROUP BY table_schema");
+                sql.append(" WHERE table_schema != 'temp' GROUP BY table_schema");
 
                 var schemaSizes = new SqlSelector(CoreSchema.getInstance().getSchema(), sql).getValueMap();
                 results.put("databaseSchemaSize", schemaSizes);
@@ -1278,8 +1282,9 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
         ContainerManager.addContainerListener(new EmailPreferenceContainerListener());
         UserManager.addUserListener(new EmailPreferenceUserListener());
 
-        CoreMigrationSchemaHandler.register();
         Encryption.checkMigration();
+
+        McpServiceImpl.get().startMpcServer();
     }
 
     // Issue 7527: Auto-detect missing SQL views and attempt to recreate
@@ -1300,6 +1305,12 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
     }
 
     @Override
+    public void registerMigrationHandlers(@NotNull DatabaseMigrationService service)
+    {
+        CoreMigrationSchemaHandler.register(service);
+    }
+
+    @Override
     public void registerServlets(ServletContext servletCtx)
     {
 //        even though there is one webdav tree rooted at "/" we still use two servlet bindings.
@@ -1308,6 +1319,9 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
         _webdavServletDynamic = servletCtx.addServlet("static", new WebdavServlet(true));
         _webdavServletDynamic.setMultipartConfig(SpringActionController.getMultiPartConfigElement());
         _webdavServletDynamic.addMapping("/_webdav/*");
+
+        McpService.setInstance(new McpServiceImpl());
+        McpServiceImpl.get().registerServlets(servletCtx);
     }
 
     @Override
@@ -1454,6 +1468,14 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
     }
 
     @Override
+    public @NotNull Collection<Supplier<Class<?>>> getIntegrationTestFactories()
+    {
+        List<Supplier<Class<?>>> ret = new ArrayList<>(super.getIntegrationTestFactories());
+        ret.add(new JspTestCase("/org/labkey/api/data/ColumnInfoTests.jsp"));
+        return ret;
+    }
+
+    @Override
     public @NotNull Set<Class<?>> getUnitTests()
     {
         return Set.of(
@@ -1594,15 +1616,17 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
             properties.put(SearchService.PROPERTY.categories.toString(), SearchService.navigationCategory.getName());
             ActionURL startURL = PageFlowUtil.urlProvider(ProjectUrls.class).getStartURL(c);
             startURL.setExtraPath(c.getId());
-            WebdavResource doc = new SimpleDocumentResource(c.getParsedPath(),
-                    "link:" + c.getId(),
-                    c.getEntityId(),
-                    "text/plain",
-                    body,
-                    startURL,
-                    UserManager.getUser(c.getCreatedBy()), c.getCreated(),
-                    null, null,
-                    properties);
+            WebdavResource doc = new SimpleDocumentResource(
+                c.getParsedPath(),
+                "link:" + c.getId(),
+                c.getEntityId(),
+                "text/plain",
+                body,
+                startURL,
+                UserManager.getUser(c.getCreatedBy()), c.getCreated(),
+                null, null,
+                properties
+            );
             queue.addResource(doc);
         };
         r.run();
@@ -1672,8 +1696,9 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
                 if (supportFolder != null)
                 {
                     MutableSecurityPolicy supportPolicy = new MutableSecurityPolicy(supportFolder.getPolicy());
-                    for (Role assignedRole : supportPolicy.getAssignedRoles(guests))
-                        supportPolicy.removeRoleAssignment(guests, assignedRole);
+                    supportPolicy.getAssignedRoles(guests).forEach(assignedRole ->
+                        supportPolicy.removeRoleAssignment(guests, assignedRole)
+                    );
                     SecurityPolicyManager.savePolicy(supportPolicy, User.getAdminServiceUser());
                 }
             }
